fix work text overflow

--- a/client/src/components/HomeSections/Sections/Work/Work.module.scss
+++ b/client/src/components/HomeSections/Sections/Work/Work.module.scss
@@ -5,6 +5,10 @@
   margin-left: 0.4rem;
 }
 
+.TextScroller {
+  width: 100%;
+}
+
 .Logobox {
   height: 30px;
   margin-bottom: 0.4rem;
@@ -16,8 +20,11 @@
 .LocationBox {
   display: flex;
   align-items: center;
+  width: 100%;
+  overflow: hidden;
   p {
     margin-left: 0.3rem;
+    white-space: pre;
   }
   svg {
     font-size: 100%;
